--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
             <li class="nav-item dropdown" id="hide-it" style="display: none;">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: black;">
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" onclick="signOut();">Log out</a>
-                <a class="dropdown-item" href="../profile.php">Profile</a>
-              </div>
             </li>
             <li class="nav-item" id="hide-login">
               <button type="button" class="btn btn-outline-light top-buttons login" id="Login" onclick="openLForm()">Login</button>
@@ -63,7 +59,7 @@
       <section class="Image">
         <div class="course-name">
           <h1><span class="purple">Digital Marketing</span></h1>
-          <h5>Learn from Serial Entrepreneur who grew 2 ventures to 15 Mn+ Monthly Traffic - Step by Step Process<br />for Digital Success</h5>
+          <h5>Learn from Serial Entrepreneur who grew 2 ventures to 15 Mn+ Monthly Traffic<br/>Step by Step Process for Digital Success</h5>
           <br>
           <div class="Offer-1">
             <h5><span class="purple">Course By:</span></h5>
